argocd/image-updater-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater
spec:
  template:
    spec:
      containers:
      - name: argocd-image-updater
        command:
        - /usr/local/bin/argocd-image-updater
        - run
        - --interval=120s
        - --loglevel=debug
